force-app/main/default/objects/SS_Response_Event__e/fields/error__c.field-meta.xml
<CustomField>
    <fullName>error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si ocurre un error en SS al enviar el registro, marcar como true</description>
    <label>error</label>
    <type>Checkbox</type>
</CustomField>