force-app/main/default/objects/SS_Response_Event__e/fields/Id_Registro__c.field-meta.xml
<CustomField>
    <fullName>Id_Registro__c</fullName>
    <description>Id Salesforce del registro enviado a SS</description>
    <label>Id Registro</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>